samples/_failures_safe/1761519027_60b498_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f3fd019d.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_f3fd019d.c:180:40: error: expected ‘;’ at end of input
  180 |     for (int i = 0; i < graph->vertices
      |                                        ^
      |                                        ;
./samples/SAFE/__tmp_f3fd019d.c:180:5: error: expected declaration or statement at end of input
  180 |     for (int i = 0; i < graph->vertices
      |     ^~~
